# sovereign-note

./: .buildinfo  Dockerfile  README.rst  boostnote.py  convert_boostnote_to_jex.py  convert_jex_to_boostnote.py  docker-compose.yml  genindex.html  index.html  joplin.py  main.py  objects.inv  pyproject.toml  requirements.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  requirements.doctree
.doctrees/boostnote/: index.doctree  legacy.doctree  next-local.doctree
.doctrees/joplin/: index.doctree  jex.doctree
.doctrees/obsidian/: index.doctree
.github/workflows/: build-docs.yml  python-package.yml
_sources/: index.rst.txt
_sources/boostnote/: next-local.rst.txt
boostnote/: index.html  legacy.html  next-local.html
docs/: Dockerfile  boostnote-json-schema.json  conf.py  index.rst  requirements.txt
docs/boostnote/: index.rst  legacy.rst  next-local-metadata-schema.json  next-local-note-schema.json  next-local.rst
docs/joplin/: index.rst  jex.rst
docs/obsidian/: index.rst
joplin/: __init__.py  clipper.py  index.html  jex.html
obsidian/: index.html
sovereign_note/: __main__.py  cli.py  convert_boostnote_to_jex.py  convert_jex_to_boostnote.py  util.py
sovereign_note/boostnote/: __init__.py
sovereign_note/joplin/: __init__.py
tests/: test_convert.py  test_sovereign_note.py
tests/resources/example-boostnote-collection/: boostnote.json
tests/resources/example-boostnote-collection/notes/: 9836727e-da73-4191-b4e2-81770565e494.cson  ae08726c-5343-4f59-a3d6-bd0544381a1e.cson  d70facf2-3fba-46e8-a172-02a7be3742c7.cson
