[tool.isort]
profile = "black"

[tool.poetry]
name = "sovereign-note"
version = "0.1.0"
description = ""
authors = ["Elliot Miller <elliot@bitoffdev.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cson = "^0.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = "^22.1.0"
isort = "^5.10.1"
flake8-black = "^0.2.4"
flake8-isort = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
